fix: contrast issues

--- a/css/comp-page.css
+++ b/css/comp-page.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 :root {
-    --primary-colour: #00b594;
+    --primary-colour: #047857;
     --secondary-colour: #d0f7f0;
     --primary-font-colour: #fff;
     --secondary-font-colour: #000;
