--- a/pages/components/Badge/badge.css
+++ b/pages/components/Badge/badge.css
@@ -6,7 +6,7 @@
 
 .badge-count {
     position: absolute;
-    background-color: #f44336;
+    background-color: #dd1313;
     color: #fff;
     border-radius: 50%;
     top: 0;
